cmake_minimum_required(VERSION 3.28)
project(untitled)

set(CMAKE_CXX_STANDARD 11)

add_executable(untitled
        code/9_14.h
        swexpertacademy.h
        main.cpp
        code/9_15.h
        algospot/restore.h
        code/9_16.h
        code/9_17.h
        week-1/2309.h
        solved_ac/1260.h
        solved_ac/30087.h
        solved_ac/marathon/3/25305.h
)
