cmake_minimum_required(VERSION 3.28)
project(untitled)

set(CMAKE_CXX_STANDARD 11)

add_executable(untitled
        code/9_14.h
        swexpertacademy.h
        main.cpp
        code/9_15.h
        algospot/restore.h
        code/9_16.h
        code/9_17.h
        week-1/2309.h
        solved_ac/1260.h
        solved_ac/30087.h
        solved_ac/marathon/3/25305.h
        algospot/tictactoe.h
        algospot/numbergame.h
        solved_ac/marathon/4/25991.h
        swea/d2/두개의숫자열.h
        swea/d2/숫자배열회전.h
        swea/d2/파리퇴치3.h
)
