cmake_minimum_required(VERSION 3.28)
project(untitled)

set(CMAKE_CXX_STANDARD 11)

add_executable(untitled
        문제해결전략/9_14.h
        swexpertacademy.h
        main.cpp
        문제해결전략/9_15.h
        algospot/restore.h
        문제해결전략/9_16.h
        문제해결전략/9_17.h
        큰돌/week-1/2309.h
        solved_ac/marathon/class/1260.h
        solved_ac/marathon/class/30087.h
        solved_ac/marathon/3/25305.h
        algospot/tictactoe.h
        algospot/numbergame.h
        solved_ac/marathon/4/25991.h
        swea/d2/두개의숫자열.h
        swea/d2/숫자배열회전.h
        swea/d2/파리퇴치3.h
        solved_ac/marathon/4/7567.h
        swea/d4/수영대회결승전.h
        swea/d4/장훈이의높은선반.h
        swea/d4/파핑파핑지뢰찾기.h
        solved_ac/marathon/4/2930.h
        큰돌/week-2/10709.h
        큰돌/week-2/3474.h
        큰돌/week-2/2852.h
        큰돌/week-2/1436.h
        큰돌/week-2/9012.h
        solved_ac/marathon/6/30791.h
        programmers/67257.h
        큰돌/week-2/4949.h
        큰돌/week-2/14502.h
        solved_ac/marathon/6/5063.h
        solved_ac/marathon/6/6811.h
        solved_ac/marathon/6/26416.h
        큰돌/week-2/2636.h
        큰돌/week-2/1068.h
        큰돌/week-2/1325.h
        solved_ac/marathon/6/1894.h
        큰돌/week-2/17298.h
        백준/1253.h
        solved_ac/marathon/6/24313.h
        백준/17626.h
        큰돌/week-2/2178.h
        백준/1389.h
        백준/1074.h
)
